--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: 0%;
+  padding: 0%;
+  background-image: url(https://c4.wallpaperflare.com/wallpaper/725/44/32/slam-dunk-shohoku-high-anime-sakuragi-hanamichi-wallpaper-thumb.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.bar {
+  display: flex;
+  justify-content: space-between;
+  background-color: #000000cc;
+  padding: 2rem;
+  margin-bottom: 0.5rem;
+  color: antiquewhite;
+}
+.search {
+  border-radius: 0.7rem;
+  width: 35rem;
+  border-style: double;
+}
+
+h2{
+  color: antiquewhite;
+}
+
+.list {
+  color: antiquewhite;
+}
+
+.btn {
+  margin-top: 1rem;
+  margin-left: 0.5rem;
+}
+
+button {
+  background-color: #d00707;
+  color: antiquewhite;
+  border-radius: 2rem;
+  gap: 4rem;
 }
